--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="./resposive.css">
-    <link rel="stylesheet" href="./components/footer/main.css">
-    <link rel="stylesheet" href="./components/footer/responsive.css">
-    <link rel="stylesheet" href="components/explore-options-near-me/main.css">
     <link rel="stylesheet" href="assests/css/fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
         integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -17,7 +14,7 @@
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBIoIr2Y33v0IdprP2CEPnEU07j1IPUUyjnw&s">
     <title>Yamate - Online Food Ordering App</title>
 </head>
-
+<!-- html cho trang chu -->
 <body>
     <!--HEADER-->
     <header>
